[package]
name = "watermelon"
version = "0.1.1"
description = "High level actor based implementation NATS Core and NATS Jetstream client implementation"
categories = ["api-bindings", "network-programming"]
keywords = ["nats", "client", "jetstream"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["websocket", "non-standard-zstd"]

[dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "time"] }
arc-swap = "1"
futures-core = "0.3"
bytes = "1"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1"
pin-project-lite = "0.2"
chrono = { version = "0.4.20", default-features = false, features = ["std", "clock", "serde"] }

# random number generation
rand = { version = "0.9", default-features = false, features = ["thread_rng"], optional = true }
getrandom = { version = "0.3.1", optional = true }

# from-env
envy = { version = "0.4", optional = true }

# portable-atomic
portable-atomic = { version = "1", optional = true }

watermelon-mini = { version = "0.1", path = "../watermelon-mini", default-features = false }
watermelon-net = { version = "0.1", path = "../watermelon-net", default-features = false }
watermelon-proto = { version = "0.1.1", path = "../watermelon-proto" }
watermelon-nkeys = { version = "0.1", path = "../watermelon-nkeys", default-features = false }

thiserror = "2"

[dev-dependencies]
tokio = { version = "1.36", features = ["macros"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
claims = "0.8"

[features]
default = ["aws-lc-rs", "from-env", "rand"]
websocket = ["watermelon-mini/websocket"]
aws-lc-rs = ["watermelon-mini/aws-lc-rs", "watermelon-nkeys/aws-lc-rs"]
ring = ["watermelon-mini/ring", "watermelon-nkeys/ring"]
fips = ["watermelon-mini/fips", "watermelon-nkeys/fips"]
from-env = ["dep:envy"]
rand = ["dep:rand", "watermelon-mini/rand", "watermelon-net/rand"]
getrandom = ["dep:getrandom", "watermelon-mini/getrandom", "watermelon-net/getrandom"]
portable-atomic = ["dep:portable-atomic"]
non-standard-zstd = ["watermelon-mini/non-standard-zstd", "watermelon-net/non-standard-zstd", "watermelon-proto/non-standard-zstd"]

[lints]
workspace = true
